testsuite/tests/properties/invalid_prop_literal/test.out
Valid case
Code generation was successful
Valid case
Code generation was successful
Invalid case
test.py:12: error: Invalid abstract expression: 12.9

Done
